# sru-robot-deployment

./: .gitignore  README.md  setup_ros2_onnx.sh  setup_ros2_torch.sh
b2w_sim/: README.md
b2w_sim/b2w_collision_monitor/: LICENSE  package.xml
b2w_sim/b2w_controllers/: LICENSE  package.xml
b2w_sim/b2w_description_ros2/: CMakeLists.txt  package.xml
b2w_sim/b2w_description_ros2/xacro/: gazebo.xacro
b2w_sim/b2w_gazebo_ros2/: CMakeLists.txt  package.xml
b2w_sim/b2w_gazebo_ros2/launch/: b2w_gazebo.launch.py  gazebo.launch.py
b2w_sim/b2w_joystick_control/: CMakeLists.txt  README.md  package.xml
b2w_sim/b2w_joystick_control/config/: ps5_config.yaml
b2w_sim/b2w_joystick_control/include/b2w_joystick_control/: joystick_teleop.hpp
b2w_sim/b2w_joystick_control/launch/: joystick_teleop.launch.py
b2w_sim/b2w_joystick_control/src/: joystick_teleop.cpp  joystick_teleop_node.cpp
b2w_sim/b2w_sim_worlds/: package.xml
rl_nav_controller/: LICENSE  README.md  package.xml  setup.cfg  setup.py
rl_nav_controller/launch/: rl_nav_controller.launch.py
rl_nav_controller/rl_nav_controller/: constants.py  rl_nav_controller.py  utils.py  visualization.py  waypoint_manager.py
rl_nav_controller/scripts/: test_onnx_inference.py
