<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>b2w_gazebo_ros2</name>
  <version>0.1.0</version>
  <description>Gazebo simulation for b2w</description>
  <maintainer email="per.a.frivik@gmail.com">perfrivik</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Dependencies -->
  <depend>ros_gz_sim</depend>
  <exec_depend>b2w_description</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros gazebo_plugin_path="${prefix}/lib" gazebo_media_path="${prefix}/worlds"/>
  </export>
</package>